# rlextract

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: decode.rs  detect.rs  lib.rs  main.rs  ocr.rs  pipeline.rs  serve.rs
