[package]
name = "rlextract"
version = "0.1.0"
edition = "2021"

[features]
# Compile ffmpeg from source and link it statically. Required when the system
# ffmpeg headers are non-standard (e.g. Raspberry Pi OS ships ffmpeg with
# extra AVPixelFormat variants that break ffmpeg-next's bindings).
static-ffmpeg = ["ffmpeg-next/build"]

[dependencies]
ffmpeg-next = "8.1"
image = "0.25"
imageproc = "0.25"
ndarray = "0.17"
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
strsim = "0.11"
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
